# Virelix

./: .gitignore  README.md  dump.rdb  main.py  pyproject.toml
backend/: .env  db.sqlite3
backend/accounts/: admin.py  apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/accounts/migrations/: 0001_initial.py
backend/accounts/selectors/: user_selector.py
backend/accounts/services/: crypto.py  user_service.py
backend/ai_agent/: admin.py  agent.py  apps.py  exceptions.py  models.py  permissions.py  schemas.py  serializers.py  services.py  tasks.py  tools.py  urls.py  views.py
backend/ai_agent/migrations/: 0001_initial.py
backend/ai_agent/selectors/: __init__.py  agent_selector.py
backend/ai_agent/services/: __init__.py  agent_service.py
backend/backend/: __init__.py  celery.py  paginations.py  settings.py  urls.py
backend/dashboard/: apps.py  auth.py  selectors.py  serializers.py  urls.py  views.py
backend/data_entry/: admin.py  faker_test.py  models.py  permissions.py  serializers.py  tasks.py  urls.py  views.py
backend/inventory/: admin.py  apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/products/: admin.py  apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/projects/: admin.py  apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/sales/: admin.py  apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/api/: agent.js  (+8 more)
(+101 files in other folders)
